--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "MD5": "^1.3.0",
+    "backbone": "*",
     "express": "3.x",
-	"backbone": "*",
-	"underscore": "*",
-	"jade": "*",
-	"markdown": "*",
-	"redis": "*",
-	"socket.io": "*"
+    "jade": "*",
+    "markdown": "*",
+    "mongodb": "*",
+    "redis": "*",
+    "socket.io": "*",
+    "underscore": "*"
   }
 }
